task 2 - doanh thu theo đại lý - Admin

--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Shared/Admin_Layout.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Shared/Admin_Layout.cshtml
@@ -113,17 +113,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="courses">
+                        <a asp-area="" asp-controller="Admin" asp-action="DealerSalesReport" class="nav-link">
                             <div class="nav-content">
                                 <i class="bi bi-book nav-icon"></i>
-                                Online Courses
+                                Dealer Sale Report
                             </div>
                         </a>
-                        <ul class="submenu" id="submenu-courses" style="display: none;">
-                            <li><a href="#" class="submenu-link">All Courses</a></li>
-                            <li><a href="#" class="submenu-link">Add Course</a></li>
-                            <li><a href="#" class="submenu-link">Categories</a></li>
-                        </ul>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="membership">
