--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Vehicle/AddVehicle.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Vehicle/AddVehicle.cshtml
@@ -14,7 +14,7 @@
                     <h2 class="mb-0 text-center">Add Vehicle</h2>
                 </div>
                 <div class="card-body">
-                    <form asp-action="AddVehicle" method="post">
+                    <form asp-action="AddVehicle" method="post" enctype="multipart/form-data">
                         @Html.AntiForgeryToken()
                         <div class="mb-3">
                             <label asp-for="CategoryId" class="form-label"></label>
@@ -50,7 +50,7 @@
                         </div>
                         <div class="mb-3">
                             <label asp-for="Image" class="form-label"></label>
-                            <input asp-for="Image" class="form-control" />
+                            <input type="file" class="form-control" name="ImageFile" />
                             <span asp-validation-for="Image" class="text-danger"></span>
                         </div>
                         <div class="d-flex justify-content-end gap-2">
@@ -63,7 +63,3 @@
         </div>
     </div>
 </div>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
