fix ui order and customer, update layout. add search and update order status. add search, paging vehicle in create order

--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Home/Index.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
                         @if (!isLoggedIn)
                         {
                             <div class="hero-cta" data-aos="fade-up" data-aos-delay="400">
-                                <a asp-area="" asp-controller="Account" asp-action="Login" class="btn-primary">Book a Test Drive</a>
+                                <a asp-area="" asp-controller="Account" asp-action="Login" class="btn-primary">Sign In</a>
                             </div>
                         }
 
