--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Inventory/MyRequests.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Inventory/MyRequests.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "My Inventory Requests";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/Dealer_Layout.cshtml";
 }
 
 <div class="container mt-5" style="margin-top: 120px !important;">
