--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Order/Details.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Order/Details.cshtml
@@ -1,73 +1,67 @@
 ﻿@model BusinessObject.BusinessObject.OrderModels.Respond.GetOrderByIdResponseDto
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Order Details";
+    Layout = "~/Views/Shared/Staff_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<div class="container mt-4">
+    <div class="card mb-4">
+        <div class="card-header bg-primary text-white">
+            <h4 class="mb-0">Order Information</h4>
+        </div>
+        <div class="card-body">
+            <dl class="row mb-0">
+                <dt class="col-sm-3">Order Id</dt>
+                <dd class="col-sm-9">@Model.OrderId</dd>
+                <dt class="col-sm-3">Order Date</dt>
+                <dd class="col-sm-9">@Model.OrderDate.ToString("yyyy-MM-dd")</dd>
+                <dt class="col-sm-3">Total Amount</dt>
+                <dd class="col-sm-9 fw-bold">@String.Format("{0:N0}", Model.TotalAmount) VND</dd>
+                <dt class="col-sm-3">Status</dt>
+                <dd class="col-sm-9">
+                    <span class="badge @(Model.Status == "Success" ? "bg-success" : "bg-secondary")">@Model.Status</span>
+                </dd>
+                <dt class="col-sm-3">Customer Name</dt>
+                <dd class="col-sm-9">@Model.CustomerName</dd>
+            </dl>
+        </div>
+    </div>
 
-<div>
-    <h4>Order</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderId)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.OrderId)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderDate)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.OrderDate)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TotalAmount)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TotalAmount)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CustomerName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CustomerName)
-        </dd>
-    </dl>
-</div>
+    <div class="card mb-4">
+        <div class="card-header bg-info text-white">
+            <h5 class="mb-0">Order Vehicles</h5>
+        </div>
+        <div class="card-body p-0">
+            <div class="table-responsive">
+                <table class="table table-bordered mb-0">
+                    <thead class="table-light">
+                        <tr>
+                            <th>Vehicle Name</th>
+                            <th>Quantity</th>
+                            <th>Unit Price</th>
+                            <th>Total</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var vehicle in Model.OrderVehicles)
+                        {
+                            <tr>
+                                <td>@vehicle.VehicleName</td>
+                                <td>@vehicle.Quantity</td>
+                                <td>@String.Format("{0:N0}", vehicle.UnitPrice) VND</td>
+                                <td>@String.Format("{0:N0}", vehicle.Quantity * vehicle.UnitPrice) VND</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
-<div>
-    <h4>Order Vehicles</h4>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Vehicle Name</th>
-                <th>Quantity</th>
-                <th>Unit Price</th>
-                <th>Total</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var vehicle in Model.OrderVehicles)
-            {
-                <tr>
-                    <td>@vehicle.VehicleName</td>
-                    <td>@vehicle.Quantity</td>
-                    <td>@vehicle.UnitPrice.ToString("C")</td>
-                    <td>@((vehicle.Quantity * vehicle.UnitPrice).ToString("C"))</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
+    <div class="mb-3">
+        <a asp-action="Index" class="btn btn-secondary">
+            <i class="bi bi-arrow-left"></i> Back to List
+        </a>
+    </div>
 </div>
