--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Shared/Dealer_Layout.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Shared/Dealer_Layout.cshtml
@@ -62,17 +62,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="layouts">
+                        <a asp-area="" asp-controller="Manager" asp-action="OrderApproval" class="nav-link">
                             <div class="nav-content">
                                 <i class="bi bi-layout-sidebar nav-icon"></i>
-                                Layouts
+                                Manager Order
                             </div>
                         </a>
-                        <ul class="submenu" id="submenu-layouts" style="display: none;">
-                            <li><a href="#" class="submenu-link">Default Layout</a></li>
-                            <li><a href="#" class="submenu-link">Boxed Layout</a></li>
-                            <li><a href="#" class="submenu-link">Fixed Layout</a></li>
-                        </ul>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="widget">
