--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Shared/Dealer_Layout.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Shared/Dealer_Layout.cshtml
@@ -70,17 +70,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="widget">
+                        <a asp-area="" asp-controller="Appointment" asp-action="AppointmentApproval" class="nav-link">
                             <div class="nav-content">
                                 <i class="bi bi-puzzle nav-icon"></i>
                                 Widget
                             </div>
                         </a>
-                        <ul class="submenu" id="submenu-widget" style="display: none;">
-                            <li><a href="#" class="submenu-link">Chart Widgets</a></li>
-                            <li><a href="#" class="submenu-link">Data Widgets</a></li>
-                            <li><a href="#" class="submenu-link">UI Widgets</a></li>
-                        </ul>
                     </li>
                 </ul>
             </div>
